debut home + color picker festvial

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/color-picker": "^6.0.0",
     "@angular/animations": "~12.1.0-",
     "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.1.0-",
