--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@asymmetrik/ngx-leaflet": "^13.0.2",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -32,6 +34,7 @@
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
+    "@types/leaflet": "^1.7.11",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
